[gd_scene load_steps=16 format=2]

[ext_resource path="res://escenas/Control.gd" type="Script" id=1]
[ext_resource path="res://sprites/KinematicBody2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://bases/suelo.png" type="Texture" id=3]
[ext_resource path="res://bases/plataforma cristal.png" type="Texture" id=4]
[ext_resource path="res://iconos/pause-button.png" type="Texture" id=5]
[ext_resource path="res://escenas/buttonPause.gd" type="Script" id=6]
[ext_resource path="res://iconos/pause-button-bold.png" type="Texture" id=7]
[ext_resource path="res://iconos/buttonSalir.PNG" type="Texture" id=8]
[ext_resource path="res://iconos/buttonContinuar.PNG" type="Texture" id=9]
[ext_resource path="res://fondos/background-pause.jpg" type="Texture" id=10]
[ext_resource path="res://iconos/buttonInicio.PNG" type="Texture" id=11]
[ext_resource path="res://escenas/ciudad.gd" type="Script" id=12]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 50, 0, 50, 50, 0, 50 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 50, 0, 50, 50, 0, 50 )

[sub_resource type="TileSet" id=3]
0/name = "suelo.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 50, 50 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "plataforma cristal.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 50, 50 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="ciudad" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 12 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 50, 50 )
cell_quadrant_size = 50
format = 1
tile_data = PoolIntArray( -1507329, 0, 0, -1572864, 0, 0, -1572863, 0, 0, -1572862, 0, 0, -1572861, 0, 0, -1572860, 0, 0, -1572859, 0, 0, -1572858, 0, 0, -1572857, 0, 0, -1572856, 0, 0, -1572855, 0, 0, -1572854, 0, 0, -1572853, 0, 0, -1572852, 0, 0, -1572851, 0, 0, -1572850, 0, 0, -1572849, 0, 0, -1572848, 0, 0, -1572847, 0, 0, -1572846, 0, 0, -1572845, 0, 0, -1572844, 0, 0, -1572843, 0, 0, -1572842, 0, 0, -1572841, 0, 0, -1572840, 0, 0, -1572839, 0, 0, -1572838, 0, 0, -1572837, 0, 0, -1572836, 0, 0, -1572835, 0, 0, -1572834, 0, 0, -1572833, 0, 0, -1572832, 0, 0, -1572831, 0, 0, -1572830, 0, 0, -1572829, 0, 0, -1572828, 0, 0, -1572827, 0, 0, -1572826, 0, 0, -1572825, 0, 0, -1572824, 0, 0, -1441793, 0, 0, -1507288, 0, 0, -1376257, 0, 0, -1441752, 0, 0, -1310721, 0, 0, -1376250, 1, 0, -1376249, 1, 0, -1376248, 1, 0, -1376247, 1, 0, -1376246, 1, 0, -1376245, 1, 0, -1376229, 1, 0, -1376228, 1, 0, -1376227, 1, 0, -1376226, 1, 0, -1376225, 1, 0, -1376224, 1, 0, -1376223, 1, 0, -1376222, 1, 0, -1376216, 0, 0, -1245185, 0, 0, -1310716, 1, 0, -1310715, 1, 0, -1310694, 1, 0, -1310685, 1, 0, -1310680, 0, 0, -1179649, 0, 0, -1245182, 1, 0, -1245181, 1, 0, -1245159, 1, 0, -1245148, 1, 0, -1245144, 0, 0, -1114113, 0, 0, -1179634, 1, 0, -1179631, 1, 0, -1179630, 1, 0, -1179629, 1, 0, -1179628, 1, 0, -1179627, 1, 0, -1179626, 1, 0, -1179625, 1, 0, -1179620, 1, 0, -1179619, 1, 0, -1179618, 1, 0, -1179617, 1, 0, -1179616, 1, 0, -1179608, 0, 0, -1048577, 0, 0, -1114112, 1, 0, -1114098, 1, 0, -1114081, 1, 0, -1114080, 1, 0, -1114079, 1, 0, -1114073, 1, 0, -1114072, 0, 0, -983041, 0, 0, -1048576, 1, 0, -1048575, 1, 0, -1048568, 1, 0, -1048565, 1, 0, -1048562, 1, 0, -1048543, 1, 0, -1048542, 1, 0, -1048541, 1, 0, -1048536, 0, 0, -917505, 0, 0, -983040, 1, 0, -983039, 1, 0, -983038, 1, 0, -983026, 1, 0, -983004, 1, 0, -983000, 0, 0, -851969, 0, 0, -917504, 1, 0, -917503, 1, 0, -917502, 1, 0, -917501, 1, 0, -917500, 1, 0, -917464, 0, 0, -786433, 0, 0, -851947, 1, 0, -851946, 1, 0, -851945, 1, 0, -851944, 1, 0, -851943, 1, 0, -851942, 1, 0, -851929, 1, 0, -851928, 0, 0, -720897, 0, 0, -786431, 1, 0, -786429, 1, 0, -786414, 1, 0, -786413, 1, 0, -786412, 1, 0, -786411, 1, 0, -786405, 1, 0, -786397, 1, 0, -786392, 0, 0, -655361, 0, 0, -720894, 1, 0, -720879, 1, 0, -720868, 1, 0, -720865, 1, 0, -720862, 1, 0, -720860, 1, 0, -720859, 1, 0, -720856, 0, 0, -589825, 0, 0, -655354, 1, 0, -655352, 1, 0, -655351, 1, 0, -655350, 1, 0, -655349, 1, 0, -655344, 1, 0, -655328, 1, 0, -655327, 1, 0, -655320, 0, 0, -524289, 0, 0, -589819, 1, 0, -589811, 1, 0, -589784, 0, 0, -458753, 0, 0, -524288, 1, 0, -524284, 1, 0, -524265, 1, 0, -524248, 0, 0, -393217, 0, 0, -458752, 1, 0, -458729, 1, 0, -458712, 0, 0, -327681, 0, 0, -393216, 1, 0, -393214, 1, 0, -393193, 1, 0, -393176, 0, 0, -262145, 0, 0, -327680, 1, 0, -327677, 1, 0, -327660, 1, 0, -327659, 1, 0, -327658, 1, 0, -327657, 1, 0, -327653, 1, 0, -327652, 1, 0, -327651, 1, 0, -327650, 1, 0, -327649, 1, 0, -327648, 1, 0, -327647, 1, 0, -327646, 1, 0, -327645, 1, 0, -327644, 1, 0, -327642, 1, 0, -327640, 0, 0, -196609, 0, 0, -262144, 1, 0, -262140, 1, 0, -262126, 1, 0, -262120, 1, 0, -262114, 1, 0, -262113, 1, 0, -262112, 1, 0, -262104, 0, 0, -131073, 0, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -196604, 1, 0, -196603, 1, 0, -196599, 1, 0, -196598, 1, 0, -196597, 1, 0, -196596, 1, 0, -196593, 1, 0, -196578, 1, 0, -196577, 1, 0, -196576, 1, 0, -196568, 0, 0, -65537, 0, 0, -131066, 1, 0, -131047, 1, 0, -131046, 1, 0, -131042, 1, 0, -131032, 0, 0, -1, 0, 0, -65509, 1, 0, -65506, 1, 0, -65501, 1, 0, -65498, 1, 0, -65496, 0, 0, 65535, 0, 0, 4, 1, 0, 30, 1, 0, 37, 1, 0, 40, 0, 0, 131071, 0, 0, 65539, 1, 0, 65556, 1, 0, 65557, 1, 0, 65566, 1, 0, 65569, 1, 0, 65576, 0, 0, 196607, 0, 0, 131072, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131100, 1, 0, 131101, 1, 0, 131102, 1, 0, 131106, 1, 0, 131112, 0, 0, 262143, 0, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196625, 1, 0, 196626, 1, 0, 196643, 1, 0, 196648, 0, 0, 327679, 0, 0, 262146, 1, 0, 262149, 1, 0, 262154, 1, 0, 262155, 1, 0, 262160, 1, 0, 262180, 1, 0, 262181, 1, 0, 262184, 0, 0, 393215, 0, 0, 327720, 0, 0, 458751, 0, 0, 393216, 1, 0, 393241, 1, 0, 393242, 1, 0, 393243, 1, 0, 393244, 1, 0, 393245, 1, 0, 393255, 1, 0, 393256, 0, 0, 524287, 0, 0, 458772, 1, 0, 458773, 1, 0, 458776, 1, 0, 458777, 1, 0, 458782, 1, 0, 458792, 0, 0, 589823, 0, 0, 524289, 1, 0, 524291, 1, 0, 524292, 1, 0, 524294, 1, 0, 524297, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524319, 1, 0, 524328, 0, 0, 655359, 0, 0, 589833, 1, 0, 589834, 1, 0, 589851, 1, 0, 589852, 1, 0, 589853, 1, 0, 589855, 1, 0, 589856, 1, 0, 589862, 1, 0, 589863, 1, 0, 589864, 0, 0, 720895, 0, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655385, 1, 0, 655386, 1, 0, 655387, 1, 0, 655400, 0, 0, 786431, 0, 0, 720900, 1, 0, 720901, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720930, 1, 0, 720931, 1, 0, 720932, 1, 0, 720933, 1, 0, 720934, 1, 0, 720935, 1, 0, 720936, 0, 0, 851967, 0, 0, 786465, 1, 0, 786466, 1, 0, 786472, 0, 0, 917503, 0, 0, 851998, 1, 0, 852008, 0, 0, 983039, 0, 0, 917533, 1, 0, 917534, 1, 0, 917544, 0, 0, 1048575, 0, 0, 983040, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983051, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983063, 1, 0, 983065, 1, 0, 983067, 1, 0, 983069, 1, 0, 983070, 1, 0, 983071, 1, 0, 983072, 1, 0, 983073, 1, 0, 983074, 1, 0, 983075, 1, 0, 983076, 1, 0, 983077, 1, 0, 983078, 1, 0, 983079, 1, 0, 983080, 0, 0, 1114111, 0, 0, 1048576, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048587, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048599, 0, 0, 1048601, 0, 0, 1048603, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1048608, 0, 0, 1048609, 0, 0, 1048610, 0, 0, 1048611, 0, 0, 1048612, 0, 0, 1048613, 0, 0, 1048614, 0, 0, 1048615, 0, 0, 1048616, 0, 0 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 341.46, 690.837 )

[node name="Control" type="Control" parent="KinematicBody2D"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="efecto" type="Tween" parent="KinematicBody2D/Control"]
pause_mode = 2

[node name="buttons" type="Control" parent="KinematicBody2D/Control"]
margin_left = -19.8022
margin_top = -21.3027
margin_right = 20.1978
margin_bottom = 18.6973
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Control/buttons"]
position = Vector2( -1006.45, -104.661 )
scale = Vector2( 1.01665, 0.86109 )
texture = ExtResource( 10 )

[node name="buttonExit" type="Button" parent="KinematicBody2D/Control/buttons"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -1122.0
margin_top = -94.0
margin_right = -930.0
margin_bottom = -24.0
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="buttonContinue" type="Button" parent="KinematicBody2D/Control/buttons"]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -1122.0
margin_top = -206.0
margin_right = -930.0
margin_bottom = -136.0
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="buttonInicio" type="Button" parent="KinematicBody2D/Control/buttons"]
pause_mode = 2
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1102.0
margin_top = -150.0
margin_right = -950.0
margin_bottom = -80.0
icon = ExtResource( 11 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="buttonPause" type="TextureButton" parent="KinematicBody2D/Control"]
pause_mode = 2
anchor_left = 1.0
anchor_right = 1.0
margin_left = 429.318
margin_top = -410.884
margin_right = 493.318
margin_bottom = -346.884
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 7 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="n1" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 2083.77, 119.543 )
scale = Vector2( 1.71876, 0.624689 )

[connection signal="pressed" from="KinematicBody2D/Control/buttons/buttonExit" to="KinematicBody2D/Control" method="_on_buttonExit_pressed"]
[connection signal="pressed" from="KinematicBody2D/Control/buttons/buttonContinue" to="KinematicBody2D/Control" method="_on_buttonContinue_pressed"]
[connection signal="pressed" from="KinematicBody2D/Control/buttons/buttonInicio" to="KinematicBody2D/Control" method="_on_buttonInicio_pressed"]
[connection signal="pressed" from="KinematicBody2D/Control/buttonPause" to="KinematicBody2D/Control" method="_on_buttonPause_pressed"]
